# spokane-public-brief

./: .gitignore  LICENSE  README.md  analyzer_handler.py  build.sh  ingestor_handler.py  lambda_handler.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: About.tsx  Home.tsx  MeetingDetail.tsx  Search.tsx
infra/: cloudfront.tf  dev.tfvars  eventbridge.tf  lambdaform.yaml  main.tf
scripts/: seed-data.py  setup-dynamodb-local.sh  setup-tables.py
src/spokane_public_brief/: __init__.py  analyzer.py  config.py  search.py
src/spokane_public_brief/api/: main.py
src/spokane_public_brief/ingestors/: __init__.py  legistar.py
src/spokane_public_brief/models/: __init__.py  dynamodb.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_legistar.py
